--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "blank-supabase",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev --host 0.0.0.0",
+		"dev": "svelte-kit dev --host 0.0.0.0 -p 3005",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
@@ -28,8 +28,11 @@
 	"type": "module",
 	"dependencies": {
 		"@walletconnect/web3-provider": "^1.7.7",
-		"@web3-onboard/core": "^2.2.1",
+		"@web3-onboard/core": "^2.2.3",
+		"@web3-onboard/gnosis": "^2.0.1",
 		"@web3-onboard/injected-wallets": "^2.0.5",
+		"@web3-onboard/ledger": "^2.0.1",
+		"@web3-onboard/trezor": "^2.0.2",
 		"@web3-onboard/walletconnect": "^2.0.1",
 		"date-fns": "^2.28.0",
 		"ethers": "^5.6.2",
