--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "blank-supabase",
+	"name": "onboard-test",
+	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte-kit dev --host 0.0.0.0 -p 3005",
@@ -23,20 +24,28 @@
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
 		"svelte-preprocess": "^4.10.5",
-		"tailwindcss": "^3.0.23"
+		"tailwindcss": "^3.0.23",
+		"os-browserify": "^0.3.0",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.2.0",
+		"crypto-browserify": "^3.12.0"
 	},
-	"type": "module",
 	"dependencies": {
-		"@walletconnect/web3-provider": "^1.7.7",
+		"ethers": "^5.6.2",
+		"svelte-ethers-store": "^2.2.0",
 		"@web3-onboard/core": "^2.2.3",
-		"@web3-onboard/gnosis": "^2.0.1",
 		"@web3-onboard/injected-wallets": "^2.0.5",
+		"@web3-onboard/walletconnect": "^2.0.1",
 		"@web3-onboard/ledger": "^2.0.1",
 		"@web3-onboard/trezor": "^2.0.2",
-		"@web3-onboard/walletconnect": "^2.0.1",
+		"@web3-onboard/gnosis": "^2.0.1",
+		"@web3-onboard/coinbase": "^2.0.0",
+		"@web3-onboard/keystone": "^2.0.1",
+		"@web3-onboard/torus": "^2.0.1",
+		"@web3-onboard/fortmatic": "^2.0.2",
+		"@web3-onboard/magic": "^2.0.1",
+		"@web3-onboard/portis": "^2.0.0",
 		"date-fns": "^2.28.0",
-		"ethers": "^5.6.2",
-		"rollup-plugin-polyfill-node": "^0.9.0",
-		"svelte-ethers-store": "^2.2.0"
+		"rollup-plugin-polyfill-node": "^0.9.0"
 	}
 }
